lol file update v1.2

--- a/lol.html
+++ b/lol.html
@@ -10,6 +10,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/smoothness/jquery-ui.css">
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <style>
     body {
         font-family: 'Arial', sans-serif;
@@ -137,6 +138,14 @@
     .ui-datepicker .ui-state-active {
     background: #7b1fa2 !important;
     color: #fff !important;
+    }
+
+    .swal-custom .swal-text {
+    text-align: center;   
+    }
+
+    .swal-custom .swal-footer {
+    text-align: center;  
     }
   </style>
 </head>
